tests/machine/x/c/list_nested_assign.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

int main() {
int matrix[] = {(int[]){1, 2}, (int[]){3, 4}};
matrix[1][0] = 5;
printf("%d\n", matrix[1][0]);
    return 0;
}
